--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           'Base Map': baseMap.addTo(map)
           
         }, {
-          'Suber': suburbLayer,
+          'Suberb': suburbLayer,
           'Property': propLayer
         }
         ).addTo(map);
