--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 </style>
 
     <div id='legend' style='display:none;'>
-  <strong>Stormwater Current Yield</strong>
+  <strong>Stormwater Current Yield (NZD)</strong>
   <nav class='legend clearfix'>
     <span style='background:#ee3f3f;'></span><label>less than 0</label><br />
-    <span style='background:#828279;'></span><label>NA</label><br />
     <span style='background:#d9f0a3;'></span><label>0 to 200</label><br />
     <span style='background:#addd8e;'></span><label>200 to 400</label><br />
     <span style='background:#78c679;'></span><label>400 to 600</label><br />
     <span style='background:#31a354;'></span><label>600 to 800</label><br />
     <span style='background:#006837;'></span><label>more than 800</label><br />
+    <span style='background:#828279;'></span><label>NA</label><br />
     <small>Source: <a href="Harmonic">Harmonic</a></small>
 </div>
 
@@ -119,4 +119,3 @@
   </body>
 </html>
         
-
