--- a/treemap.html
+++ b/treemap.html
@@ -9,83 +9,61 @@
           ['Type',               'space', 'cost',  'condition'],
           ['ARLT200',              null,    0               ,0],
           ['Bathroom',            'ARLT200'  , 0            ,0 ],
+          ['Bedroom',             'ARLT200', 0            ,0 ],
           ['Bedroom 1',             'ARLT200', 0            ,0 ],
           ['Bedroom 2',             'ARLT200', 0            ,0 ],
           ['Bedroom 3',             'ARLT200', 0            ,0 ],
           ['HWC',             'ARLT200', 0            ,0 ],
-          ['Hall',             'ARLT200', 0            ,0 ],
+          ['Hall 2',             'ARLT200', 0            ,0 ],
           ['Kitchen',             'ARLT200', 0            ,0 ],
           ['Landing',             'ARLT200', 0            ,0 ],
           ['Laundry',             'ARLT200', 0            ,0 ],
           ['Lounge',             'ARLT200', 0            ,0 ],
           ['Stairs',             'ARLT200', 0            ,0 ],
-          ['Cupboard',           'ARLT200', 0            ,0 ],
+          ['Kitchen Cupboard',           'ARLT200', 0            ,0 ],
+          ['HWC Cupboard',           'ARLT200', 0            ,0 ],
           ['Wardrobe',           'ARLT200', 0            ,0 ],
-          ['Ceiling Finishes-Bathroom','Bathroom',240,1,],
-['Ceiling Finishes-Bedroom 1','Bedroom 1',480,2,],
-['Ceiling Finishes-Bedroom 2','Bedroom 2',336,1,],
-['Ceiling Finishes-Bedroom 3','Bedroom 3',488,2,],
-['Ceiling Finishes-HWC','HWC',48,1,],
-['Ceiling Finishes-Hall','Hall',192,1,],
-['Ceiling Finishes-Kitchen','Kitchen',384,1,],
-['Ceiling Finishes-Landing','Landing',192,1,],
-['Ceiling Finishes-Laundry','Laundry',288,1,],
-['Ceiling Finishes-Lounge','Lounge',1152,1,],
-['Ceiling Finishes-Stairs','Stairs',192,1,],
-['Electrical-Bathroom','Bathroom',802,1,],
-['Electrical-Bedroom 1','Bedroom 1',1097,1,],
-['Electrical-Bedroom 2','Bedroom 2',1097,1,],
-['Electrical-Bedroom 3','Bedroom 3',1097,1,],
-['Electrical-HWC','HWC',295,1,],
-['Electrical-Hall','Hall',507,1,],
-['Electrical-Kitchen','Kitchen',3785,1.2,],
-['Electrical-Landing','Landing',212,1,],
-['Electrical-Laundry','Laundry',1521,1,],
-['Electrical-Lounge','Lounge',2701,1,],
-['Electrical-Stairs','Stairs',590,1,],
-['Fire Services-Hall','Hall',1290,1,],
-['Fire Services-Landing','Landing',930,1,],
-['Fire Services-Lounge','Lounge',930,1,],
-['Fixtures & Fittings-Bathroom','Bathroom',400,1,],
-['Fixtures & Fittings-HWC','HWC',2538,1,],
+          ['Ceiling Finishes-Bedroom','Bedroom',576,1,],
+['Ceiling Finishes-Hall 2','Hall 2',144,1,],
+['Ceiling Finishes-Kitchen','Kitchen',240,1,],
+['Ceiling Finishes-Laundry','Laundry',217.6,5,],
+['Ceiling Finishes-Lounge','Lounge',768,1,],
+['Electrical-Bedroom','Bedroom',802,1,],
+['Electrical-HWC Cupboard','HWC Cupboard',295,1,],
+['Electrical-Hall 2','Hall 2',507,1,],
+['Electrical-Kitchen','Kitchen',1097,1,],
+['Electrical-Laundry','Laundry',802,1,],
+['Electrical-Lounge','Lounge',2983,1.4,],
+['Fire Services-Lounge','Lounge',1620,1,],
+['Fixtures & Fittings-Bedroom','Bedroom',320,1,],
+['Fixtures & Fittings-HWC Cupboard','HWC Cupboard',2469,1.5,],
 ['Fixtures & Fittings-Kitchen','Kitchen',3212,1,],
-['Floor Finishes-Bathroom','Bathroom',240,1,],
-['Floor Finishes-Bedroom 1','Bedroom 1',1820,1,],
-['Floor Finishes-Bedroom 2','Bedroom 2',1274,1,],
-['Floor Finishes-Bedroom 3','Bedroom 3',1820,1,],
-['Floor Finishes-HWC','HWC',60,1,],
-['Floor Finishes-Hall','Hall',728,1,],
-['Floor Finishes-Kitchen','Kitchen',480,1,],
-['Floor Finishes-Landing','Landing',728,1,],
-['Floor Finishes-Laundry','Laundry',360,1,],
-['Floor Finishes-Lounge','Lounge',4368,1,],
-['Floor Finishes-Stairs','Stairs',1456,1,],
-['Interior Doors-Bathroom','Bathroom',992,1,],
-['Interior Doors-Bedroom 1','Bedroom 1',992,1,],
-['Interior Doors-Bedroom 2','Bedroom 2',992,1,],
-['Interior Doors-Bedroom 3','Bedroom 3',992,1,],
-['Interior Doors-Cupboard','Cupboard',992,1,],
-['Interior Doors-HWC','HWC',992,1,],
-['Interior Doors-Laundry','Laundry',2976,1,],
-['Interior Doors-Lounge','Lounge',1984,1,],
-['Interior Doors-Wardrobe','Wardrobe',2976,1,],
-['Sanitary Plumbing-Bathroom','Bathroom',3644,1,],
-['Sanitary Plumbing-HWC','HWC',367,1,],
-['Sanitary Plumbing-Kitchen','Kitchen',1568,3.66666666666667,],
-['Sanitary Plumbing-Laundry','Laundry',2609,1,],
-['Wall Finishes-Bathroom','Bathroom',617.6,1,],
-['Wall Finishes-Bedroom 1','Bedroom 1',1830,2,],
-['Wall Finishes-Bedroom 2','Bedroom 2',2135,2,],
-['Wall Finishes-Bedroom 3','Bedroom 3',1800,1,],
-['Wall Finishes-HWC','HWC',675,1,],
-['Wall Finishes-Hall','Hall',1500,1,],
-['Wall Finishes-Kitchen','Kitchen',1725,1,],
-['Wall Finishes-Landing','Landing',1200,1,],
-['Wall Finishes-Laundry','Laundry',975,1,],
-['Wall Finishes-Lounge','Lounge',2775,1,],
-['Wall Finishes-Stairs','Stairs',2250,1,],
-['Windows & Doors-Hall','Hall',1154,1.75,],
-['Windows & Doors-Lounge','Lounge',295,1,]
+['Fixtures & Fittings-Laundry','Laundry',663,1,],
+['Fixtures & Fittings-Lounge','Lounge',480,1,],
+['Floor Finishes-Bedroom','Bedroom',2184,1,],
+['Floor Finishes-Hall 2','Hall 2',546,1,],
+['Floor Finishes-Kitchen','Kitchen',300,1,],
+['Floor Finishes-Laundry','Laundry',300,1,],
+['Floor Finishes-Lounge','Lounge',2984.8,1,],
+['Interior Doors-Bedroom','Bedroom',992,1,],
+['Interior Doors-HWC Cupboard','HWC Cupboard',707,1,],
+['Interior Doors-Hall 2','Hall 2',992,1,],
+['Interior Doors-Kitchen','Kitchen',992,1.4,],
+['Interior Doors-Kitchen Cupboard','Kitchen Cupboard',707,1,],
+['Interior Doors-Laundry','Laundry',551,1,],
+['Interior Doors-Lounge','Lounge',992,1,],
+['Mechanical-Hall 2','Hall 2',120,1,],
+['Mechanical-Lounge','Lounge',577,2,],
+['Sanitary Plumbing-HWC Cupboard','HWC Cupboard',367,1,],
+['Sanitary Plumbing-Kitchen','Kitchen',834,1.5,],
+['Sanitary Plumbing-Laundry','Laundry',3844,1.16666666666667,],
+['Wall Finishes-Bedroom','Bedroom',2250,2,],
+['Wall Finishes-Hall 2','Hall 2',600,1,],
+['Wall Finishes-Kitchen','Kitchen',1275,1,],
+['Wall Finishes-Laundry','Laundry',1200,1,],
+['Wall Finishes-Lounge','Lounge',3375,1,],
+['Windows & Doors-Lounge','Lounge',1154,1,]
+
 
         ]);
 
@@ -107,11 +85,10 @@
         function showFullTooltip(row, size, value) {
     return '<div style="background:#fd9; padding:10px; border-style:solid">' +
            '<span style="font-family:Courier"><b>' + data.getValue(row, 0) +
-           '</b>, ' + data.getValue(row, 1) + ', ' + data.getValue(row, 2) +
-           ', ' + data.getValue(row, 3) + '</span><br>' +
+           '</b>, '  + '</span><br>' +
      data.getColumnLabel(2) +
            ' (total value): ' + size + '<br>' +
-     data.getColumnLabel(3) + ': ' + value  + ' </div>';
+     data.getColumnLabel(3) + ': ' + data.getValue(row, 3)  + ' </div>';
   }
 
       }
