--- a/treemap.html
+++ b/treemap.html
@@ -6,7 +6,7 @@
       google.setOnLoadCallback(drawChart);
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ['Type',               'space', 'cost',  'condition'],
+          ['Asset Type',           'Room', 'Cost',  'Remaining Life'],
           ['ARLT200',              null,    0               ,0],
           ['Bathroom',            'ARLT200'  , 0            ,0 ],
           ['Bedroom',             'ARLT200', 0            ,0 ],
@@ -23,46 +23,48 @@
           ['Kitchen Cupboard',           'ARLT200', 0            ,0 ],
           ['HWC Cupboard',           'ARLT200', 0            ,0 ],
           ['Wardrobe',           'ARLT200', 0            ,0 ],
-          ['Ceiling Finishes-Bedroom','Bedroom',576,1,],
-['Ceiling Finishes-Hall 2','Hall 2',144,1,],
-['Ceiling Finishes-Kitchen','Kitchen',240,1,],
-['Ceiling Finishes-Laundry','Laundry',217.6,5,],
-['Ceiling Finishes-Lounge','Lounge',768,1,],
-['Electrical-Bedroom','Bedroom',802,1,],
-['Electrical-HWC Cupboard','HWC Cupboard',295,1,],
-['Electrical-Hall 2','Hall 2',507,1,],
-['Electrical-Kitchen','Kitchen',1097,1,],
-['Electrical-Laundry','Laundry',802,1,],
-['Electrical-Lounge','Lounge',2983,1.4,],
-['Fire Services-Lounge','Lounge',1620,1,],
-['Fixtures & Fittings-Bedroom','Bedroom',320,1,],
-['Fixtures & Fittings-HWC Cupboard','HWC Cupboard',2469,1.5,],
-['Fixtures & Fittings-Kitchen','Kitchen',3212,1,],
-['Fixtures & Fittings-Laundry','Laundry',663,1,],
-['Fixtures & Fittings-Lounge','Lounge',480,1,],
-['Floor Finishes-Bedroom','Bedroom',2184,1,],
-['Floor Finishes-Hall 2','Hall 2',546,1,],
-['Floor Finishes-Kitchen','Kitchen',300,1,],
-['Floor Finishes-Laundry','Laundry',300,1,],
-['Floor Finishes-Lounge','Lounge',2984.8,1,],
-['Interior Doors-Bedroom','Bedroom',992,1,],
-['Interior Doors-HWC Cupboard','HWC Cupboard',707,1,],
-['Interior Doors-Hall 2','Hall 2',992,1,],
-['Interior Doors-Kitchen','Kitchen',992,1.4,],
-['Interior Doors-Kitchen Cupboard','Kitchen Cupboard',707,1,],
-['Interior Doors-Laundry','Laundry',551,1,],
-['Interior Doors-Lounge','Lounge',992,1,],
-['Mechanical-Hall 2','Hall 2',120,1,],
-['Mechanical-Lounge','Lounge',577,2,],
-['Sanitary Plumbing-HWC Cupboard','HWC Cupboard',367,1,],
-['Sanitary Plumbing-Kitchen','Kitchen',834,1.5,],
-['Sanitary Plumbing-Laundry','Laundry',3844,1.16666666666667,],
-['Wall Finishes-Bedroom','Bedroom',2250,2,],
-['Wall Finishes-Hall 2','Hall 2',600,1,],
-['Wall Finishes-Kitchen','Kitchen',1275,1,],
-['Wall Finishes-Laundry','Laundry',1200,1,],
-['Wall Finishes-Lounge','Lounge',3375,1,],
-['Windows & Doors-Lounge','Lounge',1154,1,]
+['Ceiling Finishes-Bedroom','Bedroom',576,8],
+['Ceiling Finishes-Hall 2','Hall 2',144,8],
+['Ceiling Finishes-Kitchen','Kitchen',240,8],
+['Ceiling Finishes-Laundry','Laundry',217.6,1],
+['Ceiling Finishes-Lounge','Lounge',768,8],
+['Electrical-Bedroom','Bedroom',802,12],
+['Electrical-HWC Cupboard','HWC Cupboard',295,24],
+['Electrical-Hall 2','Hall 2',507,12],
+['Electrical-Kitchen','Kitchen',1097,12],
+['Electrical-Laundry','Laundry',802,12],
+['Electrical-Lounge','Lounge',2983,12],
+['Fire Services-Lounge','Lounge',1620,8],
+['Fixtures & Fittings-Bedroom','Bedroom',320,10],
+['Fixtures & Fittings-HWC Cupboard','HWC Cupboard',2469,13],
+['Fixtures & Fittings-Kitchen','Kitchen',3212,12],
+['Fixtures & Fittings-Laundry','Laundry',663,16],
+['Fixtures & Fittings-Lounge','Lounge',480,10],
+['Floor Finishes-Bedroom','Bedroom',2184,12],
+['Floor Finishes-Hall 2','Hall 2',546,12],
+['Floor Finishes-Kitchen','Kitchen',300,16],
+['Floor Finishes-Laundry','Laundry',300,16],
+['Floor Finishes-Lounge','Lounge',2984.8,12],
+['Interior Doors-Bedroom','Bedroom',992,8],
+['Interior Doors-HWC Cupboard','HWC Cupboard',707,8],
+['Interior Doors-Hall 2','Hall 2',992,8],
+['Interior Doors-Kitchen','Kitchen',992,8],
+['Interior Doors-Kitchen Cupboard','Kitchen Cupboard',707,8],
+['Interior Doors-Laundry','Laundry',551,8],
+['Interior Doors-Lounge','Lounge',992,8],
+['Mechanical-Hall 2','Hall 2',120,15],
+['Mechanical-Lounge','Lounge',577,13],
+['Sanitary Plumbing-HWC Cupboard','HWC Cupboard',367,16],
+['Sanitary Plumbing-Kitchen','Kitchen',834,10],
+['Sanitary Plumbing-Laundry','Laundry',3844,10],
+['Wall Finishes-Bedroom','Bedroom',2250,5],
+['Wall Finishes-Hall 2','Hall 2',600,8],
+['Wall Finishes-Kitchen','Kitchen',1275,8],
+['Wall Finishes-Laundry','Laundry',1200,8],
+['Wall Finishes-Lounge','Lounge',3375,8],
+['Windows & Doors-Lounge','Lounge',1154,8],
+
+
 
 
         ]);
@@ -70,10 +72,8 @@
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
 
         var options = {
-          minColor: '#0d0',
-          maxColor: '#f00',
-          minColorValue: 1,
-          maxColorValue: 5,
+          minColor: '#f00',
+          maxColor: '#0d0',
           headerHeight: 15,
           fontColor: 'black',
           showScale: true,
