--- a/treemap.html
+++ b/treemap.html
@@ -8,21 +8,14 @@
         var data = google.visualization.arrayToDataTable([
           ['Asset Type',           'Room', 'Cost',  'Remaining Life'],
           ['DANQ018',              null,    0               ,0],
-          ['Bathroom',            'DANQ018'  , 0            ,0 ],
-          ['Bedroom',             'DANQ018', 0            ,5 ],
-          ['Bedroom 1',             'DANQ018', 0            ,0 ],
-          ['Bedroom 2',             'DANQ018', 0            ,0 ],
-          ['Bedroom 3',             'DANQ018', 0            ,0 ],
-          ['HWC',             'DANQ018', 0            ,0 ],
-          ['Hall 2',             'DANQ018', 0            ,8 ],
-          ['Kitchen',             'DANQ018', 0            ,8 ],
-          ['Landing',             'DANQ018', 0            ,0 ],
-          ['Laundry',             'DANQ018', 0            ,1 ],
-          ['Lounge',             'DANQ018', 0            ,8 ],
-          ['Stairs',             'DANQ018', 0            ,0 ],
-          ['Kitchen Cupboard',           'DANQ018', 0            ,8 ],
-          ['HWC Cupboard',           'DANQ018', 0            ,8 ],
-          ['Wardrobe',           'DANQ018', 0            ,0 ],
+['Bedroom','DANQ018',7124,5],
+['HWC Cupboard','DANQ018',3838,8],
+['Hall 2','DANQ018',2909,8],
+['Kitchen','DANQ018',7950,8],
+['Kitchen Cupboard','DANQ018',707,8],
+['Laundry','DANQ018',7577.6,1],
+['Lounge','DANQ018',14933.8,8],
+
 ['Ceiling Finishes-Bedroom','Bedroom',576,8],
 ['Ceiling Finishes-Hall 2','Hall 2',144,8],
 ['Ceiling Finishes-Kitchen','Kitchen',240,8],
@@ -64,16 +57,204 @@
 ['Wall Finishes-Lounge','Lounge',3375,8],
 ['Windows & Doors-Lounge','Lounge',1154,8],
 
+['Paint Finish-1','Ceiling Finishes-Laundry',25.6,1],
+['Paint Finish-2','Wall Finishes-Laundry',75,8],
+['Carpet-3','Floor Finishes-Lounge',72.8000000000001,12],
+['Paint Finish-4','Ceiling Finishes-Laundry',64,1],
+['Paint Finish-5','Wall Finishes-Bedroom',750,5],
+['Polyurethane Finish (per leaf)-6','Interior Doors-Laundry',104,8],
+['Paint Finish-7','Wall Finishes-Laundry',375,8],
+['Paint Finish-8','Ceiling Finishes-Bedroom',192,8],
+['Polyurethane Finish (per leaf)-9','Interior Doors-Bedroom',104,8],
+['Paint Finish (per leaf)-10','Interior Doors-HWC Cupboard',156,8],
+['Paint Finish-11','Ceiling Finishes-Lounge',256,8],
+['Smoke Detectors-12','Fire Services-Lounge',310,8],
+['Fire Siren/Light-13','Fire Services-Lounge',230,8],
+['Polyurethane Finish (per leaf)-14','Interior Doors-Lounge',104,8],
+['Paint Finish-15','Wall Finishes-Lounge',1125,8],
+['Paint Finish-16','Windows & Doors-Lounge',188,8],
+['Paint Finish-17','Ceiling Finishes-Hall 2',48,8],
+['Polyurethane Finish (per leaf)-18','Interior Doors-Hall 2',104,8],
+['Paint Finish-19','Wall Finishes-Hall 2',200,8],
+['Paint Finish-20','Ceiling Finishes-Kitchen',80,8],
+['Polyurethane Finish (per leaf)-21','Interior Doors-Kitchen',104,8],
+['Paint Finish-22','Wall Finishes-Kitchen',425,8],
+['Paint Finish (per leaf)-23','Interior Doors-Kitchen Cupboard',156,8],
+['Generic Taps-24','Sanitary Plumbing-Laundry',1835,10],
+['Generic Taps-25','Sanitary Plumbing-Kitchen',734,10],
+['Curtain Rails-26','Fixtures & Fittings-Bedroom',160,10],
+['Curtain Rails-27','Fixtures & Fittings-Lounge',240,10],
+['Paint Finish-28','Ceiling Finishes-Laundry',64,1],
+['Incandescent Lights-29','Electrical-Laundry',106,12],
+['Incandescent Lights-30','Electrical-Bedroom',106,12],
+['Carpet-31','Floor Finishes-Bedroom',1092,12],
+['Incandescent Lights-32','Electrical-Lounge',106,12],
+['Carpet-33','Floor Finishes-Lounge',1456,12],
+['Incandescent Lights-34','Electrical-Hall 2',106,12],
+['Carpet-35','Floor Finishes-Hall 2',273,12],
+['Incandescent Lights-36','Electrical-Kitchen',106,12],
+['Stoves-37','Fixtures & Fittings-Kitchen',1606,12],
+['Hot Water Cylinder-38','Fixtures & Fittings-HWC Cupboard',2262,13],
+['Space Heaters-39','Mechanical-Lounge',577,13],
+['Door Hardware (handles/locks)-40','Interior Doors-Kitchen',239,13],
+['Main Switch/Fusebox (domestic)-41','Electrical-Lounge',1001,14],
+['Paint Finish-42','Wall Finishes-Bedroom',750,5],
+['Internal Grilles - Ceiling-43','Mechanical-Hall 2',120,15],
+['Mirror-44','Fixtures & Fittings-Laundry',263,16],
+['Vinyl-45','Floor Finishes-Laundry',300,16],
+['Tap/Mixer-46','Sanitary Plumbing-Laundry',140,16],
+['Bathroom and Kitchen small fittings-47','Sanitary Plumbing-Laundry',300,16],
+['Shower Rose (non-slider)-48','Sanitary Plumbing-Laundry',140,16],
+['Generic Taps-49','Sanitary Plumbing-HWC Cupboard',367,16],
+['Vinyl-50','Floor Finishes-Kitchen',300,16],
+['Bathroom and Kitchen small fittings-51','Sanitary Plumbing-Kitchen',100,16],
+['Polyurethane Finish (per leaf)-52','Interior Doors-Laundry',104,8],
+['Paint Finish-53','Wall Finishes-Laundry',375,8],
+['Paint Finish-54','Ceiling Finishes-Bedroom',192,8],
+['Polyurethane Finish (per leaf)-55','Interior Doors-Bedroom',104,8],
+['Paint Finish (per leaf)-56','Interior Doors-HWC Cupboard',156,8],
+['Paint Finish-57','Ceiling Finishes-Lounge',256,8],
+['Smoke Detectors-58','Fire Services-Lounge',310,8],
+['Fire Siren/Light-59','Fire Services-Lounge',230,8],
+['Polyurethane Finish (per leaf)-60','Interior Doors-Lounge',104,8],
+['Paint Finish-61','Wall Finishes-Lounge',1125,8],
+['Paint Finish-62','Windows & Doors-Lounge',188,8],
+['Paint Finish-63','Ceiling Finishes-Hall 2',48,8],
+['Polyurethane Finish (per leaf)-64','Interior Doors-Hall 2',104,8],
+['Paint Finish-65','Wall Finishes-Hall 2',200,8],
+['Paint Finish-66','Ceiling Finishes-Kitchen',80,8],
+['Polyurethane Finish (per leaf)-67','Interior Doors-Kitchen',104,8],
+['Paint Finish-68','Wall Finishes-Kitchen',425,8],
+['Paint Finish (per leaf)-69','Interior Doors-Kitchen Cupboard',156,8],
+['Doors - Hollow-core-70','Interior Doors-Kitchen',441,18],
+['Grab-rail-71','Fixtures & Fittings-Laundry',400,20],
+['Door Hardware (handles/locks)-72','Interior Doors-Laundry',239,20],
+['Door Hardware (handles/locks)-73','Interior Doors-Bedroom',239,20],
+['Door Hardware (handles/locks)-74','Interior Doors-HWC Cupboard',239,20],
+['Door Hardware (handles/locks)-75','Interior Doors-Lounge',239,20],
+['Door Hardware (handles/locks)-76','Windows & Doors-Lounge',590,20],
+['Door Hardware (handles/locks)-77','Interior Doors-Hall 2',239,20],
+['Door Hardware (handles/locks)-78','Interior Doors-Kitchen Cupboard',239,20],
+['Paint Finish-79','Ceiling Finishes-Laundry',64,1],
+['Curtain Rails-80','Fixtures & Fittings-Bedroom',160,10],
+['Curtain Rails-81','Fixtures & Fittings-Lounge',240,10],
+['Light Switches & Powerpoints-82','Electrical-Laundry',590,24],
+['Light Switches & Powerpoints-83','Electrical-Bedroom',590,24],
+['Light Switches & Powerpoints-84','Electrical-HWC Cupboard',295,24],
+['Light Switches & Powerpoints-85','Electrical-Lounge',1180,24],
+['Phone/TV/Ethernet outlet-86','Electrical-Lounge',590,24],
+['Light Switches & Powerpoints-87','Electrical-Hall 2',295,24],
+['Light Switches & Powerpoints-88','Electrical-Kitchen',885,24],
+['Paint Finish-89','Wall Finishes-Bedroom',750,5],
+['Incandescent Lights-90','Electrical-Laundry',106,12],
+['Incandescent Lights-91','Electrical-Bedroom',106,12],
+['Carpet-92','Floor Finishes-Bedroom',1092,12],
+['Incandescent Lights-93','Electrical-Lounge',106,12],
+['Carpet-94','Floor Finishes-Lounge',1456,12],
+['Incandescent Lights-95','Electrical-Hall 2',106,12],
+['Carpet-96','Floor Finishes-Hall 2',273,12],
+['Incandescent Lights-97','Electrical-Kitchen',106,12],
+['Stoves-98','Fixtures & Fittings-Kitchen',1606,12],
+['Polyurethane Finish (per leaf)-99','Interior Doors-Laundry',104,8],
+['Paint Finish-100','Wall Finishes-Laundry',375,8],
+['Paint Finish-101','Ceiling Finishes-Bedroom',192,8],
+['Polyurethane Finish (per leaf)-102','Interior Doors-Bedroom',104,8],
+['Paint Finish (per leaf)-103','Interior Doors-HWC Cupboard',156,8],
+['Paint Finish-104','Ceiling Finishes-Lounge',256,8],
+['Smoke Detectors-105','Fire Services-Lounge',310,8],
+['Fire Siren/Light-106','Fire Services-Lounge',230,8],
+['Polyurethane Finish (per leaf)-107','Interior Doors-Lounge',104,8],
+['Paint Finish-108','Wall Finishes-Lounge',1125,8],
+['Paint Finish-109','Windows & Doors-Lounge',188,8],
+['Paint Finish-110','Ceiling Finishes-Hall 2',48,8],
+['Polyurethane Finish (per leaf)-111','Interior Doors-Hall 2',104,8],
+['Paint Finish-112','Wall Finishes-Hall 2',200,8],
+['Paint Finish-113','Ceiling Finishes-Kitchen',80,8],
+['Polyurethane Finish (per leaf)-114','Interior Doors-Kitchen',104,8],
+['Paint Finish-115','Wall Finishes-Kitchen',425,8],
+['Paint Finish (per leaf)-116','Interior Doors-Kitchen Cupboard',156,8],
+['Toilet - China (incl Cistern)-117','Sanitary Plumbing-Laundry',674,28],
+['Handbasin-118','Sanitary Plumbing-Laundry',755,28],
+['Doors - Hollow-core-119','Interior Doors-Bedroom',441,28],
+['Shelving-120','Fixtures & Fittings-HWC Cupboard',207,28],
+['Doors - Hollow-core-121','Interior Doors-Lounge',441,28],
+['Doors - Hollow-core-122','Interior Doors-Hall 2',441,28]
+
 
 
 
         ]);
 
+        /*var average = google.visualization.arrayToDataTable([
+          ['Remaining Life'],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [0],
+            [8],
+            [8],
+            [8],
+            [1],
+            [8],
+            [16],
+            [24],
+            [16],
+            [16],
+            [16],
+            [17.2],
+            [8],
+            [10],
+            [20.5],
+            [12],
+            [18],
+            [10],
+            [12],
+            [12],
+            [16],
+            [16],
+            [12],
+            [14.4],
+            [11],
+            [14.4],
+            [11],
+            [11],
+            [11],
+            [14.4],
+            [15],
+            [13],
+            [16],
+            [13],
+            [19],
+            [5],
+            [8],
+            [8],
+            [8],
+            [8],
+            [11],
+
+          ]);*/
+
         tree = new google.visualization.TreeMap(document.getElementById('chart_div'));
 
         var options = {
+          maxDepth: 1,
+          maxPostDepth:0, 
           minColor: '#f00',
           maxColor: '#0d0',
+          /*minColorValue: ,
+          maxColorValue: ,*/
           headerHeight: 15,
           fontColor: 'black',
           showScale: true,
@@ -84,11 +265,12 @@
 
         function showFullTooltip(row, size, value) {
     return '<div style="background:#fd9; padding:10px; border-style:solid">' +
-           '<span style="font-family:Courier"><b>' + data.getValue(row, 0) +
-           '</b>, '  + '</span><br>' +
-     data.getColumnLabel(2) +
-           ' (total value): ' + size + '<br>' +
-     data.getColumnLabel(3) + '(minimum value): ' + data.getValue(row, 3)  + ' </div>';
+           '<strong>' + data.getValue(row, 0) +
+          '</strong><br>' +
+     data.getColumnLabel(2) + '(total value): $' + size + '<br>' +
+     data.getColumnLabel(3) + '(minimum value): ' + data.getValue(row, 3) + 'years <br>' +
+     /*average.getColumnLabel(0) + '(average value): ' + average.getValue(row, 0) + 'years' +*/
+      '</div>';
   }
 
       }
@@ -97,7 +279,7 @@
     
   </head>
   <body>
-    <div id="chart_div" style="width: 900px; height: 500px;"></div>
+    <div id="chart_div" style="width: 90%; height: 90%;"></div>
 
   </body>
 </html>
