--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </style>
 
     <div id='legend' style='display:none;'>
-  <strong>Stormwater Current Yield (NZD)*</strong>
+  <strong>Stormwater Median Current Yield (NZD)*</strong>
   <nav class='legend clearfix'>
     <span > </span><label> Percentile (absolute value)</label><br />
     <span style='background:#6e0b0b;'></span><label> &#60; 5% (&#60; - $13)</label><br />
