--- a/combine_heatmap.html
+++ b/combine_heatmap.html
@@ -91,15 +91,15 @@
 </style>
 
     <div id='legend' style='display:none;'>
-  <strong>Wastewater Median Current Yield (NZD)*</strong>
+  <strong>Current Yield (NZD)*</strong>
   <nav class='legend clearfix'>
     <span > </span><label> Percentile (absolute value)</label><br />
-    <span style='background:#6e0b0b;'></span><label> &#60; 5% (&#60; - $13)</label><br />
-    <span style='background:#ff0000;'></span><label>  5% - 25%  (- $13 to $81) </label><br />
-    <span style='background:#f94d06;'></span><label> 25% - 50%  ($81 to $136)</label><br />
-    <span style='background:#f7d007;'></span><label> 50% - 75%  ($136 to $203)</label><br />
-    <span style='background:#2af607;'></span><label> 75% - 95%  ($203 to $395)</label><br />
-    <span style='background:#053afa;'></span><label> &#62; 95%  (&#62; $395)</label><br />
+    <span style='background:#6e0b0b;'></span><label> &#60; 5% </label><br />
+    <span style='background:#ff0000;'></span><label>  5% - 25%   </label><br />
+    <span style='background:#f94d06;'></span><label> 25% - 50%  </label><br />
+    <span style='background:#f7d007;'></span><label> 50% - 75%  </label><br />
+    <span style='background:#2af607;'></span><label> 75% - 95%  </label><br />
+    <span style='background:#053afa;'></span><label> &#62; 95%  </label><br />
     <small>*Values represent the median and individual <br />yield when viewed at the suburb and property <br />levels, respectively.<br /></small>
     <small>Source: <a href="http://www.harmonic.co.nz">Harmonic</a></small>
 </div>
