--- a/combine_heatmap.html
+++ b/combine_heatmap.html
@@ -95,9 +95,9 @@
   <nav class='legend clearfix'>
     <span > </span><label> Percentile (absolute value)</label><br />
     <span style='background:#6e0b0b;'></span><label> &#60; 5% </label><br />
-    <span style='background:#ff0000;'></span><label>  5% - 25%   </label><br />
-    <span style='background:#f94d06;'></span><label> 25% - 50%  </label><br />
-    <span style='background:#f7d007;'></span><label> 50% - 75%  </label><br />
+    <span style='background:#fc0606;'></span><label>  5% - 25%   </label><br />
+    <span style='background:#fc8000;'></span><label> 25% - 50%  </label><br />
+    <span style='background:#ffdf02;'></span><label> 50% - 75%  </label><br />
     <span style='background:#2af607;'></span><label> 75% - 95%  </label><br />
     <span style='background:#053afa;'></span><label> &#62; 95%  </label><br />
     <small>*Values represent the median and individual <br />yield when viewed at the suburb and property <br />levels, respectively.<br /></small>
