--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
     <title>WCC_heatmap</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <style>
+   /* Begin Navigation Bar Styling */
+   #nav {
+      width: 100%;
+      float: left;
+      margin: 0 0 3em 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc; }
+   #nav li {
+      float: left; }
+   #nav li a {
+      display: block;
+      padding: 8px 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #069;
+      border-right: 1px solid #ccc; }
+   #nav li a:hover {
+      color: #c00;
+      background-color: #fff; }
+   /* End navigation bar styling. */
+   
+   h1 {
+      font-size: 1.5em;
+      padding: 1em 8px;
+      color: #333;
+      background-color: #069;
+      margin: 0; }
+   
+   </style>
   </head>
   <body>
-  <h1><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste water heat map</a></h1>
-  <h1><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm water heat map</a></h1>
-  <h1><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to multiple layer heat map</a></h1>
+  <h1>WCC interactive maps show case.</h1>
+  <ul id="nav">
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste water heat map</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm water heat map</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to multiple layer heat map</a></li>
+   </ul>
   </body>
 </html>
         
