--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       font-size: 1.5em;
       padding: 1em 8px;
       color: #333;
-      background-color: #069;
+      background-color: #6699FF;
       margin: 0; }
    
    </style>
