--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       color: #333;
       background-color: #6699FF;
       margin: 0; }
+      
+  #content {
+      padding: 0 50px 50px; }
    
    </style>
   </head>
@@ -45,6 +48,10 @@
       <li><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm water heat map</a></li>
       <li><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to multiple layer heat map</a></li>
    </ul>
+   
+   <div id="content">
+      <p> This is a WCC visualization show case page. <a href="http://www.harmonic.co.nz"> see more on Harmonic</a></p>
+   </div>
   </body>
 </html>
         
