--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
   <body>
   <h1>WCC interactive maps show case.</h1>
   <ul id="nav">
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste water heat map</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm water heat map</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to multiple layer heat map</a></li>
+      <li><a href="http://www.harmonic.co.nz"> Link to Harmonic</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm Water Heat Map</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to Multiple Layer Heat Map</a></li>
+      <li><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></li>
    </ul>
    
    <div id="content">
