--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    </style>
   </head>
   <body>
-  <h1>WCC interactive maps show case.</h1>
+  <h1>WCC Interactive Maps.</h1>
   <ul id="nav">
       <li><a href="http://www.harmonic.co.nz"> Link to Harmonic</a></li>
       <li><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></li>
