--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>WCC_heatmap</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <style>
    /* Begin Navigation Bar Styling */
    #nav {
@@ -42,18 +45,35 @@
    </style>
   </head>
   <body>
-  <h1>WCC Interactive Maps.</h1>
-  <ul id="nav">
-      <li><a href="http://www.harmonic.co.nz"> Link to Harmonic</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm Water Heat Map</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to Multiple Layer Heat Map</a></li>
-      <li><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></li>
-   </ul>
-   
-   <div id="content">
-      <p> This is a WCC visualization show case page. <a href="http://www.harmonic.co.nz"> see more on Harmonic</a></p>
-   </div>
+  <div class="container">
+  <div class="jumbotron">
+    <h1>WCC Interactive Maps</h1>
+    <p>Resize this responsive page to see the effect!</p> 
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h3><a href="http://www.harmonic.co.nz"> Link to Harmonic</a></h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to Multiple Layer Heat Map</a></h3>        
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></h3>        
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
   </body>
 </html>
+
         
