--- a/index.html
+++ b/index.html
@@ -7,69 +7,38 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <style>
-   /* Begin Navigation Bar Styling */
-   #nav {
-      width: 100%;
-      float: left;
-      margin: 0 0 3em 0;
-      padding: 0;
-      list-style: none;
-      background-color: #f2f2f2;
-      border-bottom: 1px solid #ccc; 
-      border-top: 1px solid #ccc; }
-   #nav li {
-      float: left; }
-   #nav li a {
-      display: block;
-      padding: 8px 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #069;
-      border-right: 1px solid #ccc; }
-   #nav li a:hover {
-      color: #c00;
-      background-color: #fff; }
-   /* End navigation bar styling. */
-   
-   h1 {
-      font-size: 1.5em;
-      padding: 1em 8px;
-      color: #333;
-      background-color: #6699FF;
-      margin: 0; }
-      
-  #content {
-      padding: 0 50px 50px; }
-   
-   </style>
   </head>
   <body>
   <div class="container">
   <div class="jumbotron">
     <h1>WCC Interactive Maps</h1>
-    <p>Resize this responsive page to see the effect!</p> 
+    <p>This is a director page link to each interactive maps.</p> 
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <h3><a href="http://www.harmonic.co.nz"> Link to Harmonic</a></h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3><a href="http://www.harmonic.co.nz"> Harmonic</a></h3>
+      <p>Harmonic Analytics Home Page</p>
+      <p>Please contact us if you have any analytics challenge.</p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Heat map for waste water. </p>
+      <p></p>
+    </div>
+    <div class="col-sm-4">
+      <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/sw_heatmap"> Link to Storm Water Heat Map</a></h3>
+      <p>Heat map for storm water. </p>
+      <p></p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/combine_heatmap"> Link to Multiple Layer Heat Map</a></h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Heat map that combines waste water and storm water.</p>
+      <p></p>
     </div>
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>Tree map for housing project</p>
+      <p></p>
     </div>
   </div>
 </div>
