--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
   <div class="jumbotron">
     <h1>WCC Interactive Maps</h1>
-    <p>This is a director page link to each interactive maps.</p> 
+    <p>This is a navigation page for each interactive map.</p> 
   </div>
   <div class="row">
     <div class="col-sm-4">
