--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <p>Harmonic Analytics Home Page</p>
       <p>Please contact us if you have any analytics challenge.</p>
     </div>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Heatmap/ww_heatmap"> Link to Waste Water Heat Map</a></h3>
       <p>Heat map for waste water. </p>
@@ -35,6 +37,8 @@
       <p>Heat map that combines waste water and storm water.</p>
       <p></p>
     </div>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <h3><a href="http://moonbrandy.github.io/WCC_Housing"> Link to Housing Tree Map</a></h3>        
       <p>Tree map for housing project</p>
